src/v8/CAPI_RegControls.pas


function RegControls_Get_Name(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(RegControls_Get_Name_AnsiString());
end;
//------------------------------------------------------------------------------
function RegControls_Get_Next(): Integer; CDECL;
var
    elem: TRegControlObj;
    lst: TPointerList;
begin
    Result := 0;
    if ActiveCircuit[ActiveActor] <> NIL then
    begin
        lst := ActiveCircuit[ActiveActor].RegControls;
        elem := lst.Next;
        if elem <> NIL then
        begin
            repeat
                if elem.Enabled then
                begin
                    ActiveCircuit[ActiveActor].ActiveCktElement := elem;
                    Result := lst.ActiveIndex;
                end
                else
                    elem := lst.Next;
            until (Result > 0) or (elem = NIL);
        end
    end;
end;
//------------------------------------------------------------------------------
function RegControls_Get_PTratio(): Double; CDECL;
var
    elem: TRegControlObj;
begin
    Result := 0.0;
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.PT;
end;
//------------------------------------------------------------------------------
function RegControls_Get_ReverseBand(): Double; CDECL;
var
    elem: TRegControlObj;
begin
    Result := 0.0;
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.RevBandVoltage;
end;
//------------------------------------------------------------------------------
function RegControls_Get_ReverseR(): Double; CDECL;
var
    elem: TRegControlObj;
begin
    Result := 0.0;
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.RevLineDropR;
end;
//------------------------------------------------------------------------------
function RegControls_Get_ReverseVreg(): Double; CDECL;
var
    elem: TRegControlObj;
begin
    Result := 0.0;
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.RevTargetVoltage;
end;
//------------------------------------------------------------------------------
function RegControls_Get_ReverseX(): Double; CDECL;
var
    elem: TRegControlObj;
begin
    Result := 0.0;
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.RevLineDropX;
end;
//------------------------------------------------------------------------------
function RegControls_Get_TapDelay(): Double; CDECL;
var
    elem: TRegControlObj;
begin
    Result := 0.0;
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.SubsequentDelay;
end;
//------------------------------------------------------------------------------
function RegControls_Get_TapWinding(): Integer; CDECL;
var
    elem: TRegControlObj;
begin
    Result := 0;
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.TrWinding;  // has the taps
end;
//------------------------------------------------------------------------------
function RegControls_Get_Transformer_AnsiString(): Ansistring; inline;
var
    elem: TRegControlObj;
begin
    Result := '';
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.Transformer.Name;
end;

function RegControls_Get_Transformer(): PAnsiChar; CDECL;
begin
    Result := DSS_GetAsPAnsiChar(RegControls_Get_Transformer_AnsiString());
end;
//------------------------------------------------------------------------------
function RegControls_Get_VoltageLimit(): Double; CDECL;
var
    elem: TRegControlObj;
begin
    Result := 0.0;
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.VoltageLimit;
end;
//------------------------------------------------------------------------------
function RegControls_Get_Winding(): Integer; CDECL;
var
    elem: TRegControlObj;
begin
    Result := 0;
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.ElementTerminal;  // monitored winding
end;
//------------------------------------------------------------------------------
function RegControls_Get_TapNumber(): Integer; CDECL;
var
    elem: TRegControlObj;
begin
    Result := 0;
    elem := ActiveRegControl;
    if elem <> NIL then
        Result := elem.TapNum;  // tap number on the controlled-winding of the transformer controlled by this regcontrol
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_CTPrimary(Value: Double); CDECL;
begin
    Set_Parameter('CTprim', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_Delay(Value: Double); CDECL;
begin
    Set_Parameter('Delay', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ForwardBand(Value: Double); CDECL;
begin
    Set_Parameter('Band', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ForwardR(Value: Double); CDECL;
begin
    Set_Parameter('R', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ForwardVreg(Value: Double); CDECL;
begin
    Set_Parameter('Vreg', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ForwardX(Value: Double); CDECL;
begin
    Set_Parameter('X', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_IsInverseTime(Value: Wordbool); CDECL;
begin
    if Value = TRUE then
        Set_Parameter('InverseTime', 'y')
    else
        Set_Parameter('InverseTime', 'n');
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_IsReversible(Value: Wordbool); CDECL;
begin
    if Value = TRUE then
        Set_Parameter('Reversible', 'y')
    else
        Set_Parameter('Reversible', 'n');
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_MaxTapChange(Value: Integer); CDECL;
begin
    Set_Parameter('MaxTapChange', IntToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_MonitoredBus(const Value: PAnsiChar); CDECL;
begin
    Set_Parameter('Bus', Value);
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_Name(const Value: PAnsiChar); CDECL;
begin
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    if RegControlClass[ActiveActor].SetActive(Value) then
    begin
        ActiveCircuit[ActiveActor].ActiveCktElement := RegControlClass[ActiveActor].ElementList.Active;
        ActiveCircuit[ActiveActor].RegControls.Get(RegControlClass[ActiveActor].Active);
    end
    else
    begin
        DoSimpleMsg('RegControl "' + Value + '" Not Found in Active Circuit.', 5003);
    end;
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_PTratio(Value: Double); CDECL;
begin
    Set_Parameter('PTratio', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ReverseBand(Value: Double); CDECL;
begin
    Set_Parameter('RevBand', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ReverseR(Value: Double); CDECL;
begin
    Set_Parameter('RevR', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ReverseVreg(Value: Double); CDECL;
begin
    Set_Parameter('RevVreg', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_ReverseX(Value: Double); CDECL;
begin
    Set_Parameter('RevX', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_TapDelay(Value: Double); CDECL;
begin
    Set_Parameter('TapDelay', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_TapWinding(Value: Integer); CDECL;
begin
    Set_Parameter('TapWinding', IntToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_Transformer(const Value: PAnsiChar); CDECL;
begin
    Set_Parameter('Transformer', Value);
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_VoltageLimit(Value: Double); CDECL;
begin
    Set_Parameter('Vlimit', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_Winding(Value: Integer); CDECL;
begin
    Set_Parameter('Winding', IntToStr(Value));
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_TapNumber(Value: Integer); CDECL;
begin
    Set_Parameter('TapNum', IntToStr(Value));
end;
//------------------------------------------------------------------------------
function RegControls_Get_Count(): Integer; CDECL;
begin
    if Assigned(ActiveCircuit[ActiveActor]) then
        Result := ActiveCircuit[ActiveActor].RegControls.ListSize;
end;
//------------------------------------------------------------------------------
procedure RegControls_Reset(); CDECL;
var
    elem: TRegControlObj;
begin
    elem := ActiveRegControl;
    if elem <> NIL then
    begin
        elem.Reset;
    end;

end;
//------------------------------------------------------------------------------
function RegControls_Get_idx(): Integer; CDECL;
begin
    if ActiveCircuit[ActiveActor] <> NIL then
        Result := ActiveCircuit[ActiveActor].RegControls.ActiveIndex
    else
        Result := 0;
end;
//------------------------------------------------------------------------------
procedure RegControls_Set_idx(Value: Integer); CDECL;
var
    pRegControl: TRegControlObj;
begin
    if ActiveCircuit[ActiveActor] = NIL then
        Exit;
    pRegControl := ActiveCircuit[ActiveActor].RegControls.Get(Value);
    if pRegControl = NIL then
    begin
        DoSimpleMsg('Invalid RegControl index: "' + IntToStr(Value) + '".', 656565);
        Exit;
    end;
    ActiveCircuit[ActiveActor].ActiveCktElement := pRegControl;
end;
//------------------------------------------------------------------------------
end.
